@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a crash bug in the environmental controller when used with mobs and a module that gives a potion effect
+
 1.18-4.0.8:
 - The Destination Analyzer will now check for low dimension power again (RFTools Dimensions) for both the 'check' button in the dialer as well as the color of the matter transmitter beam
 
